--- a/example.ini
+++ b/example.ini
@@ -1,13 +1,14 @@
 #Copy this file as "config.ini"
 [main]
 #Time in seconds to idle before check card drop
-idleTime = 300
+idleTime: 300
 #Number for idle threads
-idleThreads = 5
+idleThreads: 5
 #Increasing "idleTime" and decreasing "idleThreads" leads to reducing flood for friends and load to computer, but also cards drop rate.
 
 [auth]
 #Paste cookies with the same name from http://steamcommunity.com/
-sessionid =
-steamLogin =
+sessionid:
+steamLogin:
 #Replace "%7C%7C" to "||" in "steamLogin"
+
